# eve_item_configurator_server_rs_old

./: Cargo.toml
src/: data_types.rs  error.rs  item_configurator_proto.rs  item_configurator_proto.tonic.rs  lib.rs  main.rs  typedef.rs
src/accessors/: accessor.rs  accessors.rs  error.rs  mod.rs
src/data/: division_names.rs  mod.rs
src/data/dynamic/: items.rs  mod.rs
src/pb/: item_configurator_proto.rs  item_configurator_proto.tonic.rs  mod.rs
src/service/: authorization.rs  characters.rs  error.rs  grpc.rs  list_items.rs  list_items_procedure.rs  mod.rs  procedure.rs  service.rs  update_items.rs
src/validator/: validator.rs
