[package]
name = "item_configurator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
character_validator = { git = "https://github.com/WiggidyW/eve_character_validator_rs.git" }

serde_json = { version = "1.0" }
prost = { version = "0.11.9" }
tonic = { version = "0.9.2" }
