[package]
name = "eve_item_configurator_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eve_character_validator = { git = "https://github.com/WiggidyW/eve_character_validator_rs.git" }
hyper = { version = "0.14", features = ["client", "http1", "tcp"] }
hyper-tls = { version = "0.5" }
serde_json = { version = "1.0" }
tonic-web = { version = "0.9" }
prost = { version = "0.11" }
tonic = { version = "0.9" }
